recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:8: error: value ::: is not a member of Int
      compute_butLast(l.tail, acc ::: l.head);
                                  ^